--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "drupal/module_filter": "^3.1",
         "drupal/paragraphs": "^1.5",
         "drupal/radix_layouts": "^4.0",
+        "drupal/views_data_export": "^1.0@beta",
         "drupal/webform": "^5.1",
         "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
