--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -13,6 +13,7 @@ module:
   config_split: 0
   contact: 0
   contextual: 0
+  csv_serialization: 0
   datetime: 0
   dynamic_page_cache: 0
   editor: 0
@@ -32,7 +33,9 @@ module:
   quickedit: 0
   radix_layouts: 0
   rdf: 0
+  rest: 0
   search: 0
+  serialization: 0
   shortcut: 0
   system: 0
   taxonomy: 0
@@ -40,6 +43,7 @@ module:
   toolbar: 0
   tour: 0
   user: 0
+  views_data_export: 0
   webform: 0
   menu_link_content: 1
   views: 10
