--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -13,6 +13,9 @@ permissions:
   - 'access content'
   - 'access shortcuts'
   - 'access site-wide contact form'
+  - 'access toolbar'
+  - 'administer menu'
+  - 'create article content'
   - 'post comments'
   - 'search content'
   - 'skip comment approval'
