--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -11,7 +11,6 @@ module:
   config: 0
   config_filter: 0
   config_split: 0
-  contact: 0
   contextual: 0
   datetime: 0
   dynamic_page_cache: 0
@@ -24,6 +23,7 @@ module:
   image: 0
   layout_discovery: 0
   link: 0
+  maillog: 0
   menu_ui: 0
   node: 0
   options: 0
@@ -37,10 +37,13 @@ module:
   system: 0
   taxonomy: 0
   text: 0
+  token: 0
   toolbar: 0
   tour: 0
   user: 0
   webform: 0
+  webform_node: 0
+  webform_ui: 0
   menu_link_content: 1
   views: 10
   paragraphs: 11
