--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -10,6 +10,7 @@ module:
   comment: 0
   config: 0
   config_filter: 0
+  config_perms: 0
   config_split: 0
   contact: 0
   contextual: 0
@@ -32,6 +33,7 @@ module:
   quickedit: 0
   radix_layouts: 0
   rdf: 0
+  registration_role: 0
   search: 0
   shortcut: 0
   system: 0
@@ -41,6 +43,7 @@ module:
   tour: 0
   user: 0
   webform: 0
+  webform_ui: 0
   menu_link_content: 1
   views: 10
   paragraphs: 11
