--- a/config/sync/core.entity_view_display.user.user.full.yml
+++ b/config/sync/core.entity_view_display.user.user.full.yml
@@ -15,6 +15,10 @@ dependencies:
   module:
     - link
     - user
+third_party_settings:
+  field_layout:
+    id: layout_onecol
+    settings: {  }
 _core:
   default_config_hash: V51QPCKkgNREKtSmB9Iu2wmAMEpktVpnzklWaZV8UYo
 id: user.user.full
