Evolution du Sprint 4 Profil utilisateur.

--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -14,9 +14,12 @@ permissions:
   - 'access shortcuts'
   - 'access site-wide contact form'
   - 'access toolbar'
+  - 'add program entities'
   - 'administer menu'
   - 'create article content'
   - 'post comments'
   - 'search content'
   - 'skip comment approval'
   - 'use text format basic_html'
+  - 'view all program revisions'
+  - 'view published program entities'
