--- a/config/sync/user.role.participant.yml
+++ b/config/sync/user.role.participant.yml
@@ -7,4 +7,6 @@ label: participant
 weight: 2
 is_admin: false
 permissions:
+  - 'add program entities'
   - 'view account users'
+  - 'view published program entities'
