--- a/config/sync/user.role.webmaster.yml
+++ b/config/sync/user.role.webmaster.yml
@@ -10,4 +10,13 @@ permissions:
   - ' webmaster administering manager and particpant '
   - 'access content overview'
   - 'access user profiles'
+  - 'access webprofiler'
+  - 'add program entities'
+  - 'administer program entities'
+  - 'delete all program revisions'
+  - 'delete program entities'
+  - 'edit program entities'
+  - 'revert all program revisions'
   - 'view program adherant'
+  - 'view published program entities'
+  - 'view unpublished program entities'
