--- a/config/sync/user.role.program_manager.yml
+++ b/config/sync/user.role.program_manager.yml
@@ -9,5 +9,14 @@ is_admin: null
 permissions:
   - 'access toolbar'
   - 'access user profiles'
+  - 'access webprofiler'
+  - 'add program entities'
+  - 'administer program entities'
+  - 'delete all program revisions'
+  - 'delete program entities'
   - 'edit program adherant'
+  - 'edit program entities'
+  - 'revert all program revisions'
   - 'view program adherant'
+  - 'view published program entities'
+  - 'view unpublished program entities'
