exportation des node basic pages et les links menu+ supression permissions custom: une alternative+ config permissions web form adhesion il  reste la derniere persmission du sprint 5

--- a/config/sync/user.role.authenticated.yml
+++ b/config/sync/user.role.authenticated.yml
@@ -16,7 +16,9 @@ permissions:
   - 'access toolbar'
   - 'administer menu'
   - 'create article content'
+  - 'edit webform submissions own node'
   - 'post comments'
   - 'search content'
   - 'skip comment approval'
   - 'use text format basic_html'
+  - 'view webform submissions own node'
