--- a/config/sync/user.role.webmaster.yml
+++ b/config/sync/user.role.webmaster.yml
@@ -10,4 +10,30 @@ permissions:
   - ' webmaster administering manager and particpant '
   - 'access content overview'
   - 'access user profiles'
+  - 'access webform overview'
+  - 'access webform submission user'
+  - 'add program entities'
+  - 'administer account settings'
+  - 'administer permissions'
+  - 'administer program entities'
+  - 'administer users'
+  - 'administer webform element access'
+  - 'administer webform submission'
+  - 'change own username'
+  - 'delete all program revisions'
+  - 'delete program entities'
+  - 'edit any webform submission'
+  - 'edit own webform'
+  - 'edit own webform submission'
+  - 'edit program entities'
+  - 'edit webform submissions any node'
+  - 'edit webform submissions own node'
+  - 'revert all program revisions'
+  - 'view all program revisions'
+  - 'view any webform submission'
+  - 'view own webform submission'
   - 'view program adherant'
+  - 'view published program entities'
+  - 'view unpublished program entities'
+  - 'view webform submissions any node'
+  - 'view webform submissions own node'
