--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,10 @@
         "cweagans/composer-patches": "^1.6.5",
         "drupal-composer/drupal-scaffold": "^2.5",
         "drupal/admin_toolbar": "^1.25",
-        "drupal/config_perms": "^1.1",
         "drupal/config_split": "^1.4",
         "drupal/console": "^1.0.2",
         "drupal/core": "^8.6.0",
+        "drupal/default_content_deploy": "^1.0@alpha",
         "drupal/devel": "^1.2",
         "drupal/maillog": "1.x-dev",
         "drupal/module_filter": "^3.1",
