--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -11,11 +11,12 @@ module:
   comment: 0
   config: 0
   config_filter: 0
-  config_perms: 0
   config_split: 0
   contextual: 0
   csv_serialization: 0
   datetime: 0
+  default_content: 0
+  default_content_deploy: 0
   dynamic_page_cache: 0
   editor: 0
   entity_reference_revisions: 0
@@ -23,6 +24,7 @@ module:
   field_layout: 0
   file: 0
   filter: 0
+  hal: 0
   history: 0
   image: 0
   layout_discovery: 0
