--- a/config/sync/webform.webform.contact.yml
+++ b/config/sync/webform.webform.contact.yml
@@ -132,11 +132,13 @@ access:
     users: {  }
     permissions: {  }
   view_any:
-    roles: {  }
+    roles:
+      - authenticated
     users: {  }
     permissions: {  }
   update_any:
-    roles: {  }
+    roles:
+      - program_manager
     users: {  }
     permissions: {  }
   delete_any:
