Ajout Formulaire adhésion avec Webform & Newsletter avec Simplenews

--- a/config/sync/user.role.anonymous.yml
+++ b/config/sync/user.role.anonymous.yml
@@ -13,4 +13,6 @@ permissions:
   - 'access content'
   - 'access site-wide contact form'
   - 'search content'
+  - 'subscribe to newsletters'
+  - 'use exclude node title'
   - 'use text format restricted_html'
