--- a/config/sync/user.role.program_manager.yml
+++ b/config/sync/user.role.program_manager.yml
@@ -10,4 +10,5 @@ permissions:
   - 'access toolbar'
   - 'access user profiles'
   - 'edit program adherant'
+  - 'use exclude node title'
   - 'view program adherant'
