--- a/config/sync/user.role.webmaster.yml
+++ b/config/sync/user.role.webmaster.yml
@@ -10,4 +10,5 @@ permissions:
   - ' webmaster administering manager and particpant '
   - 'access content overview'
   - 'access user profiles'
+  - 'use exclude node title'
   - 'view program adherant'
