--- a/composer.json
+++ b/composer.json
@@ -25,12 +25,15 @@
         "drupal/console": "^1.0.2",
         "drupal/core": "^8.6.0",
         "drupal/devel": "^1.2",
+        "drupal/drush": "^6.0@RC",
+        "drupal/exclude_node_title": "^1.0@beta",
         "drupal/maillog": "1.x-dev",
         "drupal/module_filter": "^3.1",
         "drupal/nexus": "^1.4",
         "drupal/paragraphs": "^1.5",
         "drupal/radix_layouts": "^4.0",
         "drupal/registration_role": "^1.0@beta",
+        "drupal/simplenews": "^1.0@alpha",
         "drupal/token": "^1.5",
         "drupal/views_data_export": "^1.0@beta",
         "drupal/webform": "^5.1",
