--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -19,6 +19,7 @@ module:
   dynamic_page_cache: 0
   editor: 0
   entity_reference_revisions: 0
+  exclude_node_title: 0
   field: 0
   field_layout: 0
   file: 0
@@ -42,6 +43,7 @@ module:
   search: 0
   serialization: 0
   shortcut: 0
+  simplenews: 0
   system: 0
   taxonomy: 0
   text: 0
