--- a/config/sync/webform.webform.contact.yml
+++ b/config/sync/webform.webform.contact.yml
@@ -14,10 +14,10 @@ uid: null
 template: false
 archive: false
 id: contact
-title: 'Formulaire d''inscription'
+title: 'Formulaire d''adhésion'
 description: 'Adh&eacute;sion d&#39;un programme'
 category: ''
-elements: "'#attributes':\n  class:\n    - form_adhes\ninteret_du_participant_au_programme:\n  '#type': textarea\n  '#title': 'Intérêt du participant au programme'\n  '#attributes':\n    class:\n      - form-control\ndates:\n  '#type': webform_flexbox\n  '#attributes':\n    class:\n      - col-sm-6\n  '#format': fieldset\n  date_d_arrivee:\n    '#type': date\n    '#title': 'Date d’arrivée'\n    '#attributes':\n      class:\n        - col-sm-12\n    '#datepicker': true\n    '#datepicker_button': true\n  date_de_depart:\n    '#type': date\n    '#title': 'Date de départ'\n    '#attributes':\n      class:\n        - col-sm-3\n    '#datepicker': true\n    '#datepicker_button': true\nmy_hotels:\n  '#type': webform_flexbox\n  '#attributes':\n    class:\n      - col-sm-6\n    style: col-sm-6\n  hotel:\n    '#type': webform_entity_select\n    '#title': Hôtel\n    '#target_type': node\n    '#selection_handler': 'default:node'\n    '#selection_settings':\n      target_bundles:\n        article: article\nprogram:\n  '#type': webform_flexbox\n  '#attributes':\n    class:\n      - col-sm-12\n  description_du_programme:\n    '#type': textarea\n    '#title': 'Description du programme'\n  joindre_votre_programme:\n    '#type': webform_document_file\n    '#title': 'Joindre votre programme'\n    '#max_filesize': '8'\nactions:\n  '#type': webform_actions\n  '#title': 'Submit button(s)'\n  '#attributes':\n    class:\n      - col-sm-12\n  '#submit__label': 'Send message'\nsubmit:\n  '#type': webform_flexbox"
+elements: "'#attributes':\n  class:\n    - form_adhes\nuser_adhesion:\n  '#type': textfield\n  '#title': '[current-user:name]'\n  '#disabled': true\n  '#default_value': '[current-user:uid]'\ninteret_du_participant_au_programme:\n  '#type': textarea\n  '#title': 'Intérêt du participant au programme'\n  '#attributes':\n    class:\n      - form-control\ndates:\n  '#type': webform_flexbox\n  '#attributes':\n    class:\n      - col-sm-6\n  '#format': fieldset\n  date_d_arrivee:\n    '#type': date\n    '#title': 'Date d’arrivée'\n    '#attributes':\n      class:\n        - col-sm-12\n    '#datepicker': true\n    '#datepicker_button': true\n  date_de_depart:\n    '#type': date\n    '#title': 'Date de départ'\n    '#attributes':\n      class:\n        - col-sm-3\n    '#datepicker': true\n    '#datepicker_button': true\nmy_hotels:\n  '#type': webform_flexbox\n  '#attributes':\n    class:\n      - col-sm-6\n    style: col-sm-6\n  hotel:\n    '#type': webform_entity_select\n    '#title': Hôtel\n    '#target_type': node\n    '#selection_handler': 'default:node'\n    '#selection_settings':\n      target_bundles:\n        article: article\nprogram:\n  '#type': webform_flexbox\n  '#attributes':\n    class:\n      - col-sm-12\n  description_du_programme:\n    '#type': textarea\n    '#title': 'Description du programme'\n  formulaire_d_adhesion:\n    '#type': webform_document_file\n    '#title': 'Formulaire d’adhésion'\nactions:\n  '#type': webform_actions\n  '#title': 'Submit button(s)'\n  '#attributes':\n    class:\n      - col-sm-12"
 css: ''
 javascript: ''
 settings:
@@ -127,7 +127,6 @@ settings:
 access:
   create:
     roles:
-      - anonymous
       - authenticated
     users: {  }
     permissions: {  }
