--- a/config/sync/core.entity_form_display.program.program.default.yml
+++ b/config/sync/core.entity_form_display.program.program.default.yml
@@ -6,7 +6,7 @@ dependencies:
     - field.field.program.program.field_budget
     - field.field.program.program.field_description
     - field.field.program.program.field_end_date
-    - field.field.program.program.field_program_manager
+    - field.field.program.program.field_manager
     - field.field.program.program.field_start_date
     - field.field.program.program.field_title
   module:
@@ -47,13 +47,11 @@ content:
     third_party_settings: {  }
     type: datetime_default
     region: content
-  field_program_manager:
-    weight: 5
-    settings:
-      size: 60
-      placeholder: ''
+  field_manager:
+    weight: 26
+    settings: {  }
     third_party_settings: {  }
-    type: string_textfield
+    type: options_select
     region: content
   field_start_date:
     weight: 2
