--- a/config/sync/core.entity_view_display.node.article.default.yml
+++ b/config/sync/core.entity_view_display.node.article.default.yml
@@ -14,13 +14,12 @@ dependencies:
     - comment
     - field_layout
     - image
+    - layout_discovery
     - text
     - user
-  theme:
-    - child_nexus
 third_party_settings:
   field_layout:
-    id: layout_jquery_ui_tabs
+    id: layout_onecol
     settings: {  }
 _core:
   default_config_hash: ChmU3AVqDKU32A_fyChG0W9dTRKmVBR58B6OClCLvZI
@@ -32,14 +31,14 @@ content:
   body:
     type: text_default
     weight: 2
-    region: second_tab
+    region: content
     settings: {  }
     third_party_settings: {  }
     label: hidden
   comment:
     type: comment_default
     weight: 3
-    region: third_tab
+    region: content
     label: above
     settings:
       view_mode: default
@@ -48,7 +47,7 @@ content:
   field_image:
     type: image
     weight: 0
-    region: first_tab
+    region: content
     settings:
       image_style: large
       image_link: ''
@@ -57,14 +56,14 @@ content:
   field_tags:
     type: entity_reference_label
     weight: 4
-    region: fourth_tab
+    region: content
     label: above
     settings:
       link: true
     third_party_settings: {  }
   links:
     weight: 1
-    region: first_tab
+    region: content
     settings: {  }
     third_party_settings: {  }
 hidden: {  }
