--- a/config/sync/core.entity_view_display.program.program.default.yml
+++ b/config/sync/core.entity_view_display.program.program.default.yml
@@ -6,7 +6,7 @@ dependencies:
     - field.field.program.program.field_budget
     - field.field.program.program.field_description
     - field.field.program.program.field_end_date
-    - field.field.program.program.field_program_manager
+    - field.field.program.program.field_manager
     - field.field.program.program.field_start_date
     - field.field.program.program.field_title
   module:
@@ -28,7 +28,7 @@ bundle: program
 mode: default
 content:
   field_budget:
-    weight: 6
+    weight: 7
     label: above
     settings:
       thousand_separator: ''
@@ -39,13 +39,30 @@ content:
     type: number_decimal
     region: content
   field_description:
-    weight: 4
+    weight: 5
     label: above
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   field_end_date:
+    weight: 4
+    label: above
+    settings:
+      format_type: medium
+      timezone_override: ''
+    third_party_settings: {  }
+    type: datetime_default
+    region: content
+  field_manager:
+    weight: 8
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_start_date:
     weight: 3
     label: above
     settings:
@@ -54,25 +71,8 @@ content:
     third_party_settings: {  }
     type: datetime_default
     region: content
-  field_program_manager:
-    weight: 5
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  field_start_date:
-    weight: 2
-    label: above
-    settings:
-      format_type: medium
-      timezone_override: ''
-    third_party_settings: {  }
-    type: datetime_default
-    region: content
   field_title:
-    weight: 1
+    weight: 2
     label: above
     settings:
       link_to_entity: false
@@ -82,7 +82,7 @@ content:
   name:
     label: hidden
     type: string
-    weight: -4
+    weight: 0
     region: content
     settings:
       link_to_entity: false
@@ -90,7 +90,7 @@ content:
   user_id:
     label: hidden
     type: author
-    weight: 0
+    weight: 1
     region: content
     settings: {  }
     third_party_settings: {  }
