--- a/config/sync/field.storage.program.field_start_date.yml
+++ b/config/sync/field.storage.program.field_start_date.yml
@@ -12,7 +12,7 @@ field_name: field_start_date
 entity_type: program
 type: datetime
 settings:
-  datetime_type: date
+  datetime_type: datetime
 module: datetime
 locked: false
 cardinality: 1
