--- a/config/sync/core.entity_form_display.program.program.default.yml
+++ b/config/sync/core.entity_form_display.program.program.default.yml
@@ -6,7 +6,7 @@ dependencies:
     - field.field.program.program.field_budget
     - field.field.program.program.field_description
     - field.field.program.program.field_end_date
-    - field.field.program.program.field_program_manager
+    - field.field.program.program.field_manager
     - field.field.program.program.field_start_date
     - field.field.program.program.field_title
   module:
@@ -27,14 +27,14 @@ bundle: program
 mode: default
 content:
   field_budget:
-    weight: 6
+    weight: 4
     settings:
       placeholder: ''
     third_party_settings: {  }
     type: number
     region: content
   field_description:
-    weight: 4
+    weight: 3
     settings:
       rows: 5
       placeholder: ''
@@ -42,26 +42,24 @@ content:
     type: text_textarea
     region: content
   field_end_date:
-    weight: 3
-    settings: {  }
-    third_party_settings: {  }
-    type: datetime_default
-    region: content
-  field_program_manager:
-    weight: 5
-    settings:
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: string_textfield
-    region: content
-  field_start_date:
     weight: 2
     settings: {  }
     third_party_settings: {  }
     type: datetime_default
     region: content
-  name:
+  field_manager:
+    weight: 5
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_start_date:
+    weight: 1
+    settings: {  }
+    third_party_settings: {  }
+    type: datetime_default
+    region: content
+  field_title:
     type: string_textfield
     weight: 0
     region: content
@@ -69,15 +67,7 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  user_id:
-    type: entity_reference_autocomplete
-    weight: 1
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    region: content
-    third_party_settings: {  }
 hidden:
-  field_title: true
   moderation_state: true
+  name: true
+  user_id: true
