--- a/config/sync/core.entity_view_display.program.program.default.yml
+++ b/config/sync/core.entity_view_display.program.program.default.yml
@@ -6,7 +6,7 @@ dependencies:
     - field.field.program.program.field_budget
     - field.field.program.program.field_description
     - field.field.program.program.field_end_date
-    - field.field.program.program.field_program_manager
+    - field.field.program.program.field_manager
     - field.field.program.program.field_start_date
     - field.field.program.program.field_title
   module:
@@ -54,13 +54,13 @@ content:
     third_party_settings: {  }
     type: datetime_default
     region: content
-  field_program_manager:
-    weight: 5
+  field_manager:
+    weight: 7
     label: above
     settings:
-      link_to_entity: false
+      link: true
     third_party_settings: {  }
-    type: string
+    type: entity_reference_label
     region: content
   field_start_date:
     weight: 2
