--- a/config/sync/views.view.programs.yml
+++ b/config/sync/views.view.programs.yml
@@ -1,6 +1,6 @@
 uuid: 1e42097b-bd60-4037-a942-78ee5c61f37c
 langcode: en
-status: false
+status: true
 dependencies:
   config:
     - field.storage.program.field_description
