--- a/config/sync/core.entity_form_display.node.hotels.default.yml
+++ b/config/sync/core.entity_form_display.node.hotels.default.yml
@@ -62,19 +62,19 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
-  field_title:
+  title:
+    type: string_textfield
     weight: 0
+    region: content
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-    type: string_textfield
-    region: content
 hidden:
   created: true
+  field_title: true
   path: true
   promote: true
   status: true
   sticky: true
-  title: true
   uid: true
