--- a/config/sync/core.entity_form_display.program.program.default.yml
+++ b/config/sync/core.entity_form_display.program.program.default.yml
@@ -59,7 +59,7 @@ content:
     third_party_settings: {  }
     type: datetime_default
     region: content
-  field_title:
+  name:
     type: string_textfield
     weight: 0
     region: content
@@ -68,6 +68,6 @@ content:
       placeholder: ''
     third_party_settings: {  }
 hidden:
+  field_title: true
   moderation_state: true
-  name: true
   user_id: true
