--- a/config/sync/node.type.hotels.yml
+++ b/config/sync/node.type.hotels.yml
@@ -13,6 +13,6 @@ name: Hôtels
 type: hotels
 description: ''
 help: ''
-new_revision: true
+new_revision: false
 preview_mode: 1
 display_submitted: true
