ajout de du module administeruserbyroles et configuration de la permission 4 de sprint 5

--- a/config/sync/user.role.webmaster.yml
+++ b/config/sync/user.role.webmaster.yml
@@ -12,39 +12,43 @@ permissions:
   - 'access user profiles'
   - 'access webform overview'
   - 'access webform submission user'
+  - 'access webprofiler'
+  - 'add program entities'
   - 'add program entities'
   - 'administer account settings'
   - 'administer permissions'
   - 'administer program entities'
+  - 'administer program entities'
   - 'administer users'
   - 'administer webform element access'
   - 'administer webform submission'
+  - 'cancel users by role'
   - 'change own username'
   - 'delete all program revisions'
+  - 'delete all program revisions'
+  - 'delete program entities'
   - 'delete program entities'
   - 'edit any webform submission'
   - 'edit own webform'
   - 'edit own webform submission'
   - 'edit program entities'
+  - 'edit program entities'
+  - 'edit users by role'
   - 'edit webform submissions any node'
   - 'edit webform submissions own node'
   - 'revert all program revisions'
+  - 'revert all program revisions'
+  - 'role-assign users by role'
+  - 'use exclude node title'
   - 'view all program revisions'
   - 'view any webform submission'
   - 'view own webform submission'
   - 'view program adherant'
-  - 'view published program entities'
-  - 'view unpublished program entities'
-  - 'view webform submissions any node'
-  - 'view webform submissions own node'
-  - 'use exclude node title'
-  - 'access webprofiler'
-  - 'add program entities'
-  - 'administer program entities'
-  - 'delete all program revisions'
-  - 'delete program entities'
-  - 'edit program entities'
-  - 'revert all program revisions'
   - 'view program adherant'
   - 'view published program entities'
+  - 'view published program entities'
   - 'view unpublished program entities'
+  - 'view unpublished program entities'
+  - 'view users by role'
+  - 'view webform submissions any node'
+  - 'view webform submissions own node'
